REGRESSION(r276039) [GTK] Build failures on Ubuntu 18.04 https://bugs.webkit.org/show_bug.cgi?id=224644

Unreviewed build fix.


* runtime/JSSet.h: Use HashMapImplInlines to include the base
finishCreation implementation. Somehow GCC 7.5 wasn't picking it up.


Canonical link: https://commits.webkit.org/236612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276112 268f45cc-cd09-0410-ab3c-d52691b4dbfc